# tetris

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-staging.yml  deploy.yml
src/js/: config.ts  index.html  main.tsx  package.json  store.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
src/js/components/: Announcement.tsx  App.tsx  CanvasButton.tsx  Cell.tsx  Game.tsx  Grid.tsx  HighScore.tsx  InfoBar.tsx  Menu.tsx  Overlay.tsx
src/js/interfaces/: cell.ts  grid.ts
src/js/src/: App.tsx  Cell.tsx  Game.tsx  Grid.tsx  InfoBar.jsx  main.tsx
src/py/: .dockerignore  .pylintrc  Dockerfile  game.py  game_event.py  game_state.py  game_test.py  high_score.py  high_score_test.py  pyproject.toml  server.py  storage.py
src/py/model/: cell.py  grid.py  grid_test.py
src/py/model/tetromino/: tetromino.py  tetromino_factory.py  tetromino_factory_test.py  tetromino_l.py  tetromino_test.py
src/terraform/: backend.tf
src/terraform/envs/live/: main.tf  output.tf  providers.tf  variables.tf
src/terraform/envs/staging/: main.tf  providers.tf
src/terraform/module/: backend.tf  data.tf  main.tf  output.tf  providers.tf  variables.tf
src/terraform/remote_store/: main.tf  providers.tf
