[tool.poetry]
name = "tetris"
version = "1.0"
description = "Tetris game server"
authors = ["Chris Marwick <chris_marwick@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.1"
Flask = "^3.0.2"
Flask-SocketIO = "^5.3.6"
black = "^24.2.0"
pylint = "^3.0.3"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
